package game;

public class Main {
    public static void main(String[] args){

        System.out.printf("Hallo");
    }



}
