@startuml
'https://plantuml.com/class-diagram

class Main
class Season
class Game
class Team
class TeamScore

Season "1"-->"1" Team
Season --> LeagueTable
Season --> Matchday
Matchday --> Game
Team "1"-->"n" Player
Team "1"-->"1" TeamScore
TeamScore "n"<--"1" LeagueTable
'LeagueTable "1"<--"n" TeamScore
Player "1"-->"n" PlayerPosition
Game "1"-->"2" TeamScore
Main --> Season
Game --> LeagueTable

class Game {
var Dauer
size()
start()
}




@enduml